--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-content">
         <!--About user-->
         <div class="about">
-            <h2 class="about-position">job seeker on Sales manager or order processing manager</h2>
+            <h2 class="about-position">job seeker on sales manager or order processing manager</h2>
 
             <h1 class="about-name">Dymytrian Davydovskyi</h1>
 
